--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 idna==3.10
 pi==0.1.2
+PySocks==1.7.1
 requests==2.32.3
 soupsieve==2.7
 typing_extensions==4.13.2
